add converter and test, adjust pom and XStream