@@ -2,6 +2,7 @@
     <!--
      Copyright (C) 2006 Joe Walnes.
      Copyright (C) 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2017, 2018, 2019, 2020 XStream committers.
+     Copyright (C) 2020, Oracle and/or its affiliates.
      All rights reserved.
      
      The software in this package is published under the terms of the BSD
@@ -203,6 +204,46 @@
   </build>
 
   <profiles>
+    <!-- Build Record tests using JDK 14 (or greater) if available -->
+    <profile>
+      <id>jdk14-ge</id>
+      <activation>
+        <jdk>[14,)</jdk>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <inherited>true</inherited>
+            <executions>
+              <execution>
+                <id>jdk14-ge-testCompile</id>
+                <phase>test-compile</phase>
+                <goals>
+                  <goal>testCompile</goal>
+                </goals>
+                <configuration>
+                  <release>${java.vm.specification.version}</release>
+                  <compilerArgs>
+                    <arg>--enable-preview</arg>
+                  </compilerArgs>
+                  <testExcludes>
+                    <testExclude>com/**</testExclude>
+                  </testExcludes>
+                  <testIncludes>
+                    <testInclude>jdk14-ge/**</testInclude>
+                  </testIncludes>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+      <properties>
+        <preview.arg>--enable-preview</preview.arg>
+      </properties>
+    </profile>
     <profile>
       <id>jdk11-ge</id>
       <activation>
@@ -224,7 +265,7 @@
         </plugins>
       </build>
       <properties>
-        <surefire.argline>--illegal-access=${surefire.illegal.access}</surefire.argline>
+        <surefire.argline>${preview.arg} --illegal-access=${surefire.illegal.access}</surefire.argline>
       </properties>
     </profile>
     <profile>
@@ -233,7 +274,7 @@
         <jdk>[9,11)</jdk>
       </activation>
       <properties>
-        <surefire.argline>--add-modules java.activation,java.xml.bind --illegal-access=${surefire.illegal.access}</surefire.argline>
+        <surefire.argline>${preview.arg} --add-modules java.activation,java.xml.bind --illegal-access=${surefire.illegal.access}</surefire.argline>
       </properties>
     </profile>
     <profile>
@@ -250,6 +291,9 @@
               <compilerArgs>
                 <arg>-XDignore.symbol.file</arg>
               </compilerArgs>
+              <testExcludes>
+                <testExclude>jdk14-ge/**</testExclude>
+              </testExcludes>
             </configuration>
           </plugin>
         </plugins>
@@ -306,6 +350,8 @@
   </reporting>
 
   <properties>
+    <!-- optional preview argument when running with JDK 14+ -->
+    <preview.arg></preview.arg>
     <bundle.export.package>!com.thoughtworks.xstream.core.util,com.thoughtworks.xstream.*;-noimport:=true</bundle.export.package>
     <bundle.import.package>
         org.xmlpull.mxp1;resolution:=optional,
